--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,11 @@
 name: Build
 
 on:
-  push:
+  pull_request:
     branches:
       - main
-
-
+    types:
+      - opened
 jobs:
   build:
     name: Build and analyze
