--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,3 +3,5 @@ sonar.projectKey=java-17-maven-project
 # relative paths to source directories. More details and properties are described
 # at https://docs.sonarqube.org/latest/project-administration/narrowing-the-focus/ 
 sonar.sources=src/main/java, src/test/java
+sonar.java.binaries=target/classes
+sonar.junit.reportsPath=target/surefire-reports
