--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,3 +37,14 @@ jobs:
           -Dsonar.sources=src/main/java
           -Dsonar.tests=src/test/java
           -Dsonar.junit.reportsPath=target/surefire-reports
+    - name: Download Badges
+      run: ./download_badges.sh ${{ secrets.SONAR_HOST_URL }} ${{ secrets.SONAR_PROJECT_KEY }} ${{ secrets.SONAR_TOKEN }}
+    - name: Commit and push badges
+      run: |
+        git config --global user.email "ayman.elhor2@gmail.com"
+        git config --global user.name "Ayman"
+        git add badges/
+        git commit -m "Update SonarQube badges"
+        git push
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
