--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,45 +1,27 @@
 on:
-  # Trigger analysis when pushing to your main branches, and when creating a pull request.
   workflow_dispatch:
 
-name: Main Workflow
+name: SonarQube Analysis
+
 jobs:
   sonarqube:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-      with:
-        # Disabling shallow clones is recommended for improving the relevancy of reporting
-        fetch-depth: 0
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        distribution: 'temurin'
-        java-version: '17'
-    - name: Build with Maven
-      run: mvn clean verify
-    - name: SonarQube Scan
-      uses: sonarsource/sonarqube-scan-action@v2.3.0 # Ex: v2.1.0, See the latest version at https://github.com/marketplace/actions/official-sonarqube-scan
-      env:
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-      with:
-        args: >
-          -Dsonar.projectKey=Sonar-Maven
-          -Dsonar.java.binaries=target/classes
-          -Dsonar.sources=src/main/java
-          -Dsonar.tests=src/test/java
-          -Dsonar.junit.reportsPath=target/surefire-reports
-    - name: Download Badges
-      run: |
-        chmod +x ./download_badges.sh
-        ./download_badges.sh ${{ secrets.SONAR_HOST_URL }} ${{ secrets.SONAR_PROJECT_KEY }} ${{ secrets.SONAR_TOKEN }}
-    - name: Commit and push badges
-      run: |
-        git config --global user.email "ayman.elhor2@gmail.com"
-        git config --global user.name "Ayman"
-        git add badges/
-        git commit -m "Update SonarQube badges"
-        git push
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/checkout@v2
+
+      - name: SonarQube Scan
+        run: mvn clean verify sonar:sonar -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }} -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }} -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+      - name: Download SonarQube Badges
+        run: |
+          wget -O quality_gate.svg "${{ secrets.SONAR_HOST_URL }}/api/project_badges/measure?project=${{ secrets.SONAR_PROJECT_KEY }}&metric=alert_status&token=${{ secrets.SONAR_TOKEN }}"
+          wget -O coverage.svg "${{ secrets.SONAR_HOST_URL }}/api/project_badges/measure?project=${{ secrets.SONAR_PROJECT_KEY }}&metric=coverage&token=${{ secrets.SONAR_TOKEN }}"
+
+      - name: Commit and Push Badges
+        run: |
+          git config --global user.email "ayman.elhor2@gmail.com"
+          git config --global user.name "Ayman"
+          git add quality_gate.svg coverage.svg
+          git commit -m "Update SonarQube badges"
+          git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
