--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,7 @@ jobs:
         run: |
           git config --global user.email "ayman.elhor2@gmail.com"
           git config --global user.name "Ayman"
-          git add quality_gate.svg coverage.svg
+          git add .
           git commit -m "Update SonarQube badges"
           git push
         env:
